--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
+    "eslint": "^7.15.0",
     "mdb": "^0.1.0",
     "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^2.9.2",
     "react-dom": "^17.0.1",
     "react-fade-in": "^1.1.1",
     "react-scripts": "4.0.0",
